fixed sidebar alignment

--- a/styles.css
+++ b/styles.css
@@ -55,3 +55,8 @@ button{
 body{
     text-align: center;
 }
+
+#result-box{
+    display:flex;
+    
+}
